--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.8.0",
+    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screen-brightness": "^2.0.0-alpha",
     "react-native-screens": "^3.24.0",
